---
title: AgentVouch — Entity Relationships
---

erDiagram

    REPUTATION-CONFIG {
        pubkey  authority           "admin / arbitrator"
        u64     min_stake
        u64     dispute_bond
        u8      slash_percentage
        i64     cooldown_period
        u64     stake_weight
        u64     vouch_weight
        u64     dispute_penalty
        u64     longevity_bonus
    }

    AGENT-PROFILE {
        pubkey  authority           "owner wallet"
        string  metadata_uri        "off-chain (IPFS)"
        u64     reputation_score    "computed on-chain"
        u32     total_vouches_received
        u32     total_vouches_given
        u64     total_staked_for
        u32     disputes_won
        u32     disputes_lost
        i64     registered_at
    }

    VOUCH {
        pubkey  voucher
        pubkey  vouchee
        u64     stake_amount        "SOL locked in PDA"
        enum    status              "Active | Revoked | Disputed | Slashed | Vindicated"
        u64     cumulative_revenue  "total earned from skills"
        i64     last_payout_at
        i64     created_at
    }

    DISPUTE {
        pubkey  vouch
        pubkey  challenger
        string  evidence_uri        "off-chain (IPFS)"
        enum    status              "Open | Resolved"
        enum    ruling              "SlashVoucher | Vindicate"
        i64     created_at
        i64     resolved_at
    }

    AUTHOR-DISPUTE {
        u64     dispute_id
        pubkey  author
        pubkey  challenger
        enum    reason              "MaliciousSkill | FraudulentClaims | FailedDelivery | Other"
        string  evidence_uri
        u32     backing_vouch_count_snapshot
        u32     linked_vouch_count
        u64     bond_amount
        enum    status              "Open | Resolved"
        enum    ruling              "Upheld | Dismissed"
    }

    AUTHOR-DISPUTE-VOUCH-LINK {
        pubkey  author_dispute
        pubkey  vouch
        i64     added_at
    }

    SKILL-LISTING {
        pubkey  author
        string  skill_uri           "off-chain (IPFS/Arweave)"
        string  name
        u64     price_lamports      "min 1,000,000"
        enum    status              "Active | Suspended | Removed"
        u32     total_downloads
        u64     total_revenue
        u64     unclaimed_voucher_revenue   "40% pool for vouchers"
    }

    PURCHASE {
        pubkey  buyer
        pubkey  skill_listing
        i64     purchased_at
        u64     price_paid
    }

    %% ── Core identity ──────────────────────────────────────────────────
    REPUTATION-CONFIG   ||--o{     AGENT-PROFILE           : "governs stake & dispute rules for"

    %% ── Trust chain ────────────────────────────────────────────────────
    AGENT-PROFILE       ||--o{     VOUCH                   : "issues (as voucher)"
    AGENT-PROFILE       ||--o{     VOUCH                   : "receives (as vouchee)"

    %% ── Dispute resolution ─────────────────────────────────────────────
    VOUCH               ||--o|     DISPUTE                 : "challenged by"
    AGENT-PROFILE       ||--o{     AUTHOR-DISPUTE          : "targeted by (as author)"
    AUTHOR-DISPUTE      ||--o{     AUTHOR-DISPUTE-VOUCH-LINK : "atomically snapshots via"
    VOUCH               ||--o{     AUTHOR-DISPUTE-VOUCH-LINK : "captured in"

    %% ── Skill marketplace ──────────────────────────────────────────────
    AGENT-PROFILE       ||--o{     SKILL-LISTING           : "publishes"
    SKILL-LISTING       ||--o{     PURCHASE                : "generates"
    AGENT-PROFILE       ||--o{     PURCHASE                : "makes (as buyer)"

    %% ── Revenue sharing ────────────────────────────────────────────────
    VOUCH               }o--||     SKILL-LISTING           : "earns proportional share of 40% pool from"

    %% ── Optional dispute context ───────────────────────────────────────
    AUTHOR-DISPUTE      o|--o|     SKILL-LISTING           : "optionally references"
    AUTHOR-DISPUTE      o|--o|     PURCHASE                : "optionally references"
